--- a/this/01.html
+++ b/this/01.html
@@ -17,7 +17,8 @@
       return this.xue + this.yuwen + this.yingyu;
     }
 
-    xioaming.calcTotalScore();
+    var score = xioaming.calcTotalScore();
+    alert(score)
 
     var totalScore = calcTotalScore(xiaoming)
     alert(totalScore)
